--- a/img.html
+++ b/img.html
@@ -1,1 +1,5 @@
-<img src="image/Home Page.jpg" alt="" style="width:100%;height:100%" />
+<html>
+  <body>
+    <img src="images/Home Page.jpg" alt="" style="width:100%;height:100%" />
+  </body>
+</html>
