--- a/img.html
+++ b/img.html
@@ -1,5 +1,5 @@
 <html>
-  <body>
-    <img src="images/homepage.jpg" alt="" style="width:100%;height:100%" />
+  <body style="padding:0;margin:0">
+    <img src="images/homepage.jpg" alt="" style="width:100%;height:auto" />
   </body>
 </html>
