--- a/img.html
+++ b/img.html
@@ -7,8 +7,14 @@
       font-family: 'Muli', sans-serif;
       font-size: 14px;
     }
+    .tcontet{
+      position: absolute;
+    z-index: 5000;
+    width: 100%;
+    }
   </style>
   <body style="padding:0;margin:0">
+    <div class="tcontet">Get Started</div>
     <img src="images/homepage.jpg" alt="" style="width:100%;height:auto" />
   </body>
 </html>
