--- a/img.html
+++ b/img.html
@@ -15,6 +15,6 @@
   </style>
   <body style="padding:0;margin:0">
     <div class="tcontet">Get Started</div>
-    <img src="images/homepage.jpg" alt="" style="width:100%;height:auto" />
+    <img src="images/01 Homepage - Influencer Marketing.jpg" alt="" style="width:100%;height:auto" />
   </body>
 </html>
