--- a/index-restaurant.html
+++ b/index-restaurant.html
@@ -460,7 +460,7 @@
     <script src="plugins/rs-plugin/js/extensions/revolution.extension.migration.min.js"></script>
     <script src="plugins/rs-plugin/js/extensions/revolution.extension.parallax.min.js"></script>
 
-    <script src="http://maps.google.com/maps/api/js?sensor=false&ver=5.9"></script>
+    <script src="https://maps.google.com/maps/api/js?sensor=false&ver=5.9"></script>
 
     <script>
         var tpj = jQuery;
