--- a/content/restaurant/location.html
+++ b/content/restaurant/location.html
@@ -254,7 +254,7 @@
     <script src="../../js/animations/animations.js"></script>
     <script src="../../js/scripts.js"></script>
 
-    <script src="http://maps.google.com/maps/api/js?sensor=false&ver=5.9"></script>
+    <script src="https://maps.google.com/maps/api/js?sensor=false&ver=5.9"></script>
 	<script src="../../js/email.js"></script>
 
     <script>
